--- a/index.html
+++ b/index.html
@@ -1,1 +1,3 @@
 <p>Hello!</p>
+
+<iframe width="100%" height="520" frameborder="0" src="https://thomasrhiel-newschool.cartodb.com/viz/5453f9e2-857d-11e5-abf3-0ef24382571b/embed_map" allowfullscreen webkitallowfullscreen mozallowfullscreen oallowfullscreen msallowfullscreen></iframe>
