--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@ iframe {
 
 <p>Hello!</p>
 
-<iframe frameborder="0" src="https://thomasrhiel-newschool.cartodb.com/viz/5453f9e2-857d-11e5-abf3-0ef24382571b/embed_map" allowfullscreen webkitallowfullscreen mozallowfullscreen oallowfullscreen msallowfullscreen></iframe>
+<!-- <iframe frameborder="0" src="https://thomasrhiel-newschool.cartodb.com/viz/5453f9e2-857d-11e5-abf3-0ef24382571b/embed_map" allowfullscreen webkitallowfullscreen mozallowfullscreen oallowfullscreen msallowfullscreen></iframe> -->
+
+<iframe frameBorder='0' src='https://a.tiles.mapbox.com/v4/thomasrhiel-newschool.cigp9gqmc00oav6kow04g0894/attribution,zoompan,zoomwheel,geocoder,share.html?access_token=pk.eyJ1IjoidGhvbWFzcmhpZWwtbmV3c2Nob29sIiwiYSI6ImNpZ3A5Z3J3dTAwcGJ1Nm0xNHhxd2p2d3QifQ.tITTwTDSfX0DbkzJJHoWbA'></iframe>
 
 </body>
 </html>
