--- a/index.html
+++ b/index.html
@@ -3,6 +3,22 @@
 <head>
 	
 <style>
+
+html, body {
+	font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+}
+
+header {
+	height: 4rem;
+	padding: 1rem;
+	box-sizing: border-box;
+	position: fixed;
+	top: 0;
+	left: 0;
+	width: 100%;
+	line-height: 2rem;
+}
+
 	
 iframe {
 	position: fixed;
@@ -17,7 +33,7 @@ iframe {
 </head>
 <body>
 
-<p>Hello!</p>
+<header>Building dates in Brooklyn Heights</header>
 
 <!-- <iframe frameborder="0" src="https://thomasrhiel-newschool.cartodb.com/viz/5453f9e2-857d-11e5-abf3-0ef24382571b/embed_map" allowfullscreen webkitallowfullscreen mozallowfullscreen oallowfullscreen msallowfullscreen></iframe> -->
 
